# proton-boilerplate

c++_tests/: contract_tests.cpp
contract/: CMakeLists.txt
contract/include/contract/: contract.hpp  tables.hpp
contract/src/: balance.cpp  contract.cpp  transfer.cpp
